Connection are handled in a separated thread